--- a/Ideias/site.css
+++ b/Ideias/site.css
@@ -9,14 +9,14 @@ body{
     margin: 0px;
 }
 
-.content .header{
+.content .container .header{
     display: flex;
     width: 100%;
     height: 90px;
     background-color: black;
 }
 
-.content .header ul{
+.content .container .header ul{
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -24,16 +24,32 @@ body{
     align-items: center;
 }
 
-.content .header ul #logo{
+.content .container .header ul #logo{
     display: flex;
     height: 99px;
 }
 
-.content .header ul #config{
+.content .container .header ul #config{
     display: flex;
     height: 50px;
 }
 
-.content .header ul #menu{
-    
+.content .container .header ul #menu{
+    display: flex;
+    height: 75px;
+}
+
+.content .container{
+    display: flex;
+    background-image: url(Referenccias/IMG_7617\ \(1\).jpeg);
+    background-size: cover;
+    height: 100vh;
+    width: 100%;        
+}
+
+.content .container .box{
+    display: flex;
+    align-items: center;
+    height: 20%;
+    padding: 2px;
 }
