--- a/Ideias/site.css
+++ b/Ideias/site.css
@@ -13,7 +13,7 @@ body{
     display: flex;
     width: 100%;
     height: 90px;
-    background-color: black;
+    /* background-color: black; */
 }
 
 .content .container .header ul{
@@ -26,7 +26,7 @@ body{
 
 .content .container .header ul #logo{
     display: flex;
-    height: 99px;
+    height: 60px;
 }
 
 .content .container .header ul #config{
@@ -41,15 +41,34 @@ body{
 
 .content .container{
     display: flex;
-    background-image: url(Referenccias/IMG_7617\ \(1\).jpeg);
+    background-image: url(Referenccias/encontro_carros.png);
     background-size: cover;
     height: 100vh;
-    width: 100%;        
+    width: 100%;  
+    flex-wrap: wrap;
 }
 
-.content .container .box{
+.content .container .data{
     display: flex;
-    align-items: center;
-    height: 20%;
-    padding: 2px;
+    height: 55%;
+}
+
+.content .container .data .box{   
+    display: flex;
+    height: fit-content;
+    background-color: aliceblue;
+    opacity: .40;
+    border-radius: 30px;
+}
+
+.content .container .data .box li{
+    display: flex;
+    text-decoration: none;
+    flex-direction: column;
+}
+
+.content .container .data .box li h1,
+.content .container .data .box li h2{
+    display: flex;
+    height: 25px;
 }
