--- a/Ideias/site.css
+++ b/Ideias/site.css
@@ -13,7 +13,8 @@ body{
     display: flex;
     width: 100%;
     height: 90px;
-    /* background-color: black; */
+    background: linear-gradient(to top, rgba(255, 1, 1, 0) 0%,#242424 50%,#000000 100%);
+    backdrop-filter: blur(1px);
 }
 
 .content .container .header ul{
@@ -22,6 +23,7 @@ body{
     width: 100%;
     margin: 0px 0px;
     align-items: center;
+    margin-right: 10px;
 }
 
 .content .container .header ul #logo{
@@ -41,11 +43,13 @@ body{
 
 .content .container{
     display: flex;
-    background-image: url(Referenccias/encontro_carros.png);
+    background-image: url(Referenccias/encontro_carrosDark.png);
     background-size: cover;
     height: 100vh;
     width: 100%;  
     flex-wrap: wrap;
+    box-shadow:     0px 5px 5px orangered;
+
 }
 
 .content .container .data{
@@ -56,19 +60,118 @@ body{
 .content .container .data .box{   
     display: flex;
     height: fit-content;
-    background-color: aliceblue;
-    opacity: .40;
-    border-radius: 30px;
+    flex-direction: column;
+    align-items: center;
 }
 
-.content .container .data .box li{
+.content .container .data .box .text li{
     display: flex;
     text-decoration: none;
     flex-direction: column;
+    margin: 10px;
+    color: white;
+    align-items: center;
 }
 
-.content .container .data .box li h1,
-.content .container .data .box li h2{
+.content .container .data .box .text li h1,
+.content .container .data .box .text li h2{
     display: flex;
-    height: 25px;
+    height: 10px;
 }
+
+.content .container .data .box .skip{
+    display: flex;
+    width: 340px;
+    height: 60px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.content .container .data .box .skip .ball {
+    display: flex;
+    background-color: 
+    white;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+.content .container .data .box .skip .ball .box{
+    display: flex;
+    background-color: black;
+    height: 50%;
+    width: 50%;
+    border-radius: 50%;
+    padding: 3px;
+}
+
+.content .container .data .box .skip .Erro{
+    display: flex;
+    background-color: 
+    white;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1px;
+}
+
+.content .container .data .box .skip img{
+    display: flex;
+    height: 30px;
+}
+
+.infos {
+    display: flex;
+    height: 50vh;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.infos .img{
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.infos .img img{
+    display: flex;
+    width: 600px;
+    height: 160px;
+}
+
+.infos .img .move,
+.infos .img .move2{
+    display: flex;
+    height: 12px;
+    width: 100%;
+}
+
+.infos .img .move .line,
+.infos .img .move2 .line2{
+    display: flex;
+    background-color: orangered;
+    height: 100%;
+    width: 40%;
+    border-radius: 10px 0px;
+    opacity: .75;
+}
+
+.infos .img .move .line{
+    margin-left: 15%;
+}
+
+.infos .img .move2{
+    justify-content: flex-end;
+}
+
+.infos .img .move2 .line2{
+    margin-right: 10%;
+
+}
+
+
