--- a/Ideias/site.css
+++ b/Ideias/site.css
@@ -43,7 +43,7 @@ body{
 
 .content .container{
     display: flex;
-    background-image: url(Referenccias/encontro_carrosDark.png);
+    background-image: url(Referenccias/back_ideas/encontro_carrosDark.png);
     background-size: cover;
     height: 100vh;
     width: 100%;  
@@ -177,6 +177,81 @@ body{
     display: flex;
     margin: 0px;
     width: 100%;
-    height: 100vh;
+    height: 300vh;
+    flex-direction: column;
+    box-shadow: 0px -3px 10px black;
 }
+
+.movies .wall{
+    width: 100%;
+    height: 70vh;
+}
+
+.movies .wall img {
+    width: 100%;
+    
+}
+
+.movies .line1,
+.movies .line2,
+.movies .line3,
+.movies .line4 {
+    display: flex;
+    width: 100%;
+    margin: 0px;
+}
+
+.movies .line1 img,
+.movies .line3 img{
+    display: flex;
+    width: 34%;
+    height: 700px;
+}
+
+.movies .line1 img#one,
+.movies .line3 img#seven {
+    position: relative;
+    bottom: 50px;
+}
+
+.movies .line1 img#three,
+.movies .line2 img#five {
+    position: relative;
+    bottom: 25px;
+}
+
+.movies .line2 img,
+.movies .line4 img{
+    width: 50%;
+    height: 800px;
+}
+
+.movies .line2 img#four{
+    position: relative;
+    bottom: 50px;
+    height: 725px;
+}
+
+.movies .line3{
+    position: relative;
+    bottom: 100px;
+}
+
+.movies .line3 img#eight,
+.movies .line3 img#six {
+    position: relative;
+    bottom: 75px;
+}
+
+.movies .line4 img#nine{
+    position: relative;
+    bottom: 250px;
+}
+
+.movies .line4 img#ten{
+    position: relative;
+    bottom: 200px;
+}
+
+.movies 
 
