--- a/Ideias/site.css
+++ b/Ideias/site.css
@@ -177,7 +177,7 @@ body{
     display: flex;
     margin: 0px;
     width: 100%;
-    height: 600vh;
+    height: 550vh;
     flex-direction: column;
     box-shadow: 0px -3px 10px black;
 }
@@ -266,15 +266,38 @@ body{
     height: 105vh;
     justify-content: center;
     align-items: center;
+    justify-content: space-evenly;
 }
 
-.movies .box img{
+.movies .box img#robs{
     display: flex;
     width: 80%;
     height: 80%;
     border-radius: 10px;
     border: 5px outset rgb(59, 146, 165);
 }
+
+.movies .box img{
+    display: flex;
+    width: 5%;
+    height: 6%;
+}
+
+.container {
+    display: flex;
+    background-color: black;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .myself{
+    width: 70%;
+    height: 70%;
+    
+}
+
 
 
 
