--- a/Ideias/site.css
+++ b/Ideias/site.css
@@ -34,6 +34,8 @@ body{
 .content .container .header ul #config{
     display: flex;
     height: 50px;
+    position: relative;
+    bottom: 12px;
 }
 
 .content .container .header ul #menu{
@@ -43,28 +45,41 @@ body{
 
 .content .container{
     display: flex;
-    background-image: url(Referenccias/back_ideas/encontro_carrosDark.png);
+    background-image: url(Referenccias/back_ideas/Race.jpg);
     background-size: cover;
     height: 100vh;
     width: 100%;  
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
     box-shadow:     0px 5px 5px black;
 
 }
 
-.content .container .data{
+.content .container .fixer{
     display: flex;
-    height: 55%;
+    width: 100%;
+    height: 550px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.content .container .data .box{   
+.content .container .fixer .data{
+    display: flex;
+    height: 55%;
+    width: 100%;
+    justify-content: end;
+    margin-right: 70px;
+}
+
+.content .container .fixer .data .box{   
     display: flex;
     height: fit-content;
     flex-direction: column;
     align-items: center;
 }
 
-.content .container .data .box .text li{
+.content .container .fixer .data .box .text li{
     display: flex;
     text-decoration: none;
     flex-direction: column;
@@ -73,13 +88,13 @@ body{
     align-items: center;
 }
 
-.content .container .data .box .text li h1,
-.content .container .data .box .text li h2{
+.content .container .fixer .data .box .text li h1,
+.content .container .fixer .data .box .text li h2{
     display: flex;
     height: 10px;
 }
 
-.content .container .data .box .skip{
+.content .container .fixer .row .skip{
     display: flex;
     width: 340px;
     height: 60px;
@@ -87,18 +102,18 @@ body{
     align-items: center;
 }
 
-.content .container .data .box .skip .ball {
+.content .container .fixer .row .skip .ball {
     display: flex;
     background-color: 
     white;
-    height: 15px;
-    width: 15px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
 }
 
-.content .container .data .box .skip .ball .box{
+.content .container .fixer .row .skip .ball .box1{
     display: flex;
     background-color: black;
     height: 50%;
@@ -107,21 +122,21 @@ body{
     padding: 3px;
 }
 
-.content .container .data .box .skip .Erro{
+.content .container .fixer .row .skip .Erro{
     display: flex;
     background-color: 
     white;
-    height: 15px;
-    width: 15px;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
     margin-left: 1px;
 }
 
-.content .container .data .box .skip img{
+.content .container .fixer .row .skip img{
     display: flex;
-    height: 30px;
+    height: 35px;
 }
 
 .infos {
@@ -177,7 +192,7 @@ body{
     display: flex;
     margin: 0px;
     width: 100%;
-    height: 550vh;
+    height: fit-content;
     flex-direction: column;
     box-shadow: 0px -3px 10px black;
 }
@@ -193,70 +208,17 @@ body{
 }
 
 .movies .line1,
-.movies .line2,
-.movies .line3,
-.movies .line4 {
+.movies .line2{
     display: flex;
     width: 100%;
     margin: 0px;
 }
 
 .movies .line1 img,
-.movies .line3 img{
+.movies .line2 img{
     display: flex;
-    width: 34%;
-    height: 700px;
-}
-
-.movies .line1 img#one,
-.movies .line3 img#seven {
-    position: relative;
-    bottom: 50px;
-}
-
-.movies .line1 img#three,
-.movies .line2 img#five {
-    position: relative;
-    bottom: 25px;
-}
-
-.movies .line2 img,
-.movies .line4 img{
-    width: 50%;
-    height: 800px;
-}
-
-.movies .line2 img#four{
-    position: relative;
-    bottom: 50px;
-    height: 725px;
-}
-
-.movies .line3{
-    position: relative;
-    bottom: 100px;
-}
-
-.movies .line3 img#eight,
-.movies .line3 img#six {
-    position: relative;
-    bottom: 75px;
-}
-
-.movies .line4{
-    height: 80vh;
-    position: relative;
-    bottom: 100px;
-}
-
-.movies .line4 img#nine{
-    position: relative;
-    bottom: 100px;
-}
-
-.movies .line4 img#ten{
-    position: relative;
-    bottom: 75px;
+    width: 25%;
+    height: 400px;
 }
 
 .movies .box{
@@ -283,20 +245,22 @@ body{
     height: 6%;
 }
 
-.container {
+.block{
     display: flex;
-    background-color: black;
+    height: 40vh;
     width: 100%;
-    height: 100vh;
+    background-color: rgb(119, 119, 255);
     justify-content: center;
     align-items: center;
 }
 
-.container .myself{
-    width: 70%;
-    height: 70%;
-    
+.block .myself img{
+    display: flex;
+    width: 100px;
+    height: 140px;
+    border-radius: 50%;
 }
+
 
 
 
