--- a/Site/CSS/site.css
+++ b/Site/CSS/site.css
@@ -52,6 +52,34 @@ html{
     bottom: 12px;
 }
 
+.content .container .configuracoes{
+    height: 100px;
+    width: 90px;
+    margin-left: 30px;
+    background-color: rgb(23,23,26,0.6);
+    backdrop-filter: blur(15px);
+}
+
+.content .container .configuracoes .settingsConfig {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
+
+.content .container .configuracoes .settingsConfig ul{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content .container .configuracoes .settingsConfig ul a{
+    display: flex;
+    text-decoration: none;
+    color: white;
+}
+
 .content .container .header ul #config:hover{
     height: 60px;
     transition: .5s;
@@ -105,12 +133,13 @@ html{
     align-items: center;
 }
 
-.content .container .fixer .data .box .text li{
+.content .container .fixer .data .box2 .text li{
     display: flex;
     text-decoration: none;
     flex-direction: column;
     margin: 10px;
     height: 85px;
+    width: 500px;
     color: white;
     align-items: center;
     justify-content: space-between;
@@ -136,6 +165,15 @@ html{
 }
 
 .content .container .fixer .row .skip .ball .box1{
+    display: none;
+    background-color: black;
+    height: 50%;
+    width: 50%;
+    border-radius: 50%;
+    padding: 3px;
+}
+
+.content .container .fixer .row .skip .ball .box2{
     display: flex;
     background-color: black;
     height: 50%;
@@ -144,16 +182,13 @@ html{
     padding: 3px;
 }
 
-.content .container .fixer .row .skip .Erro{
-    display: flex;
-    background-color: 
-    white;
-    height: 20px;
-    width: 20px;
+.content .container .fixer .row .skip .ball .box3{
+    display: none;
+    background-color: black;
+    height: 50%;
+    width: 50%;
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    margin-left: 1px;
+    padding: 3px;
 }
 
 .content .container .fixer .row .skip img{
@@ -327,10 +362,11 @@ html{
 
 .credenciais{
     display: flex;
-    height: 70vh;
+    height: 40vh;
     background-color: black;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
 }
 
 .credenciais .text h1{
@@ -341,40 +377,37 @@ html{
 .credenciais .container{
     display: flex;
     width: 100%;
-    height: 80%;
+    height: 90px;
     justify-content: space-evenly;
-    position: relative;
-    top: 35px;
+    align-items: center;
 }
 
 .credenciais .container .box{
+    display: flex;
     width: 30%;
-    height: 70%;
-    border: 3px solid white;
+    height: 90px;
+    align-items: center;
     justify-content: center;
     border-radius: 5px;
 }
 
-.credenciais .container .box ul{
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.credenciais .container .box ul h2,
-.credenciais .container .box ul p{
-    color: white;
-    width: fit-content;
-}
-
-.credenciais .container .box ul p button{
+.credenciais .container .box button{
     width: 200px;
-    height: 40px;
+    height: 60px;
     background-color: 
-    white;
+    black;
+    color: white;
+    border: 3px solid white;
     border-radius: 5px;
+}
+
+.credenciais .container .box button:hover{
+    background-color: white;
+    color: black;
+    border-color: rgb(59, 146, 165);
+    width: 220px;
+    height: 70px;
+    transition: 1s;
 }
 
 .credenciais .row{
@@ -410,6 +443,7 @@ html{
     width: 350px;
     justify-content: space-around;
     cursor: pointer;
+    color: whitesmoke;
 }
 
 .footer .line ul img{
@@ -421,5 +455,17 @@ html{
     height: 55px;
 }
 
+/* ANIMAÇÃO */
+.fade-out {
+    animation: fadeOut 1s forwards;
+}
 
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
 
