--- a/Site/CSS/index.css
+++ b/Site/CSS/index.css
@@ -5,6 +5,7 @@
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 .content{
@@ -16,7 +17,7 @@ html{
 
 .content .container{
     display: flex;
-    background-image: url(Referencias/back_ideas/Sem\ título.png);
+    background-image: url(Referencias/back_ideas/Forza-Furious-Pack.png);
     background-size: cover;
     height: 100vh;
     width: 100%;  
@@ -37,7 +38,7 @@ html{
 
 .content .container .header ul{
     display: flex;
-    width: 150px;
+    width: 200px;
     height: 100%;
     align-items: center;
     margin-left: 20px;
@@ -45,6 +46,7 @@ html{
     justify-content: center;
     color: white;
     justify-content: space-between;
+    margin: 0px 20px ;
 }
 
 .content .container .header ul a{
@@ -130,8 +132,7 @@ html{
     display: flex;
     height: 55%;
     width: 100%;
-    justify-content: end;
-    margin-right: 70px;
+    margin-left: 70px;
 }
 
 .content .container .fixer .data .box{   
@@ -280,18 +281,55 @@ html{
     
 }
 
-.movies .line1,
-.movies .line2{
+.movies .line{
     display: flex;
     width: 100%;
     margin: 0px;
 }
 
-.movies .line1 img,
-.movies .line2 img{
+.movies .line a{
     display: flex;
     width: 25%;
     height: 400px;
+}
+
+.movies .line a img{
+    display: flex;
+    width: 100%;
+}
+
+.movies .resumo{
+    display: flex;
+    height: 40vh;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+}
+
+.movies .resumo .borda {
+    display: flex;
+    border: 3px outset rgb(59, 146, 165);
+    width: 80%;
+    height: 80%;
+    justify-content: center;
+    align-items: center;
+}
+
+.movies .resumo .borda .texto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    width: 65%;
+    color: white;
+}
+
+.movies .resumo .borda .texto h1,
+.movies .resumo .borda .texto h3{
+    display: flex;
+    height: fit-content;
+    width: fit-content;
 }
 
 .movies .box{
@@ -318,12 +356,37 @@ html{
     align-items: center;
 }
 
+.movies .box #sobreFilme h1,
+.movies .box #sobreFilme h3{
+    background-color: black;
+}
+
+.movies .box .rua{
+    display: flex;
+    position: absolute;
+    width: 20px;
+    height: 84%;
+    left: 900px;
+    background-color: orange;
+    z-index: 0;
+}
+.movies .box .rua2{
+    display: flex;
+    position: absolute;
+    width: 20px;
+    height: 84%;
+    background-color: orange;
+    left: 930px;
+    z-index: 0;
+}
+
 .movies .box #sobreFilme ul{
     margin: 0px 150px;  
     display: flex;
     height: 40%;
     flex-direction: column;
     justify-content: space-around;
+    z-index: 2;
 }
 
 .movies .box img#robs{
@@ -332,6 +395,7 @@ html{
     height: 80%;
     border-radius: 10px;
     border: 5px outset rgb(59, 146, 165);
+    z-index: 1;
 }
 
 .movies .box img{
