--- a/site/public/css/joguinho.css
+++ b/site/public/css/joguinho.css
@@ -4,7 +4,8 @@
 }
 
 body{
-    overflow-x: hidden;
+    scroll-behavior: smooth;
+    /* overflow: hidden; */
 }
 
 .container{
@@ -21,6 +22,55 @@ body{
     background-color: rgb(68, 68, 68);
     box-shadow: 0px 3px 6px black;
     z-index: 1;
+    justify-content: center;
+}
+
+.container .header ul {
+    display: flex;
+    width: 90%;
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 40px;
+}
+
+.container .header ul section {
+    display: flex;
+    height: 100%;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .header ul section label {
+    display: flex;
+    text-decoration: none;
+    font-family: 'Brygada 1918', serif;
+    color: white;
+    height: 100%;
+    align-items: center;
+    font-size: 50px; 
+}
+
+.container .header ul section #foto{
+    display: flex;
+    height: 105px;
+    margin-top: 10px;
+}
+
+.container .header ul section #foto:hover{
+    height: 110px;
+    transition: .5s;
+}
+
+.container .header ul section #foto2{
+    display: flex;
+    height: 60px
+}
+
+.container .header ul section #foto2:hover{
+    height: 68px;
+    transition: .7s;
 }
 
 .container .box{
