--- a/site/public/css/joguinho.css
+++ b/site/public/css/joguinho.css
@@ -1,21 +1,21 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
-body{
+body {
     scroll-behavior: smooth;
     /* overflow: hidden; */
 }
 
-.container{
+.container {
     display: flex;
     height: 100vh;
     width: 100%;
     flex-direction: column;
 }
 
-.container .header{
+.container .header {
     display: flex;
     width: 100%;
     height: 100px;
@@ -32,14 +32,16 @@ body{
     justify-content: space-between;
     align-items: center;
     margin-left: 40px;
+    margin-left: 140px;
 }
 
 .container .header ul section {
     display: flex;
     height: 100%;
-    width: 200px;
+    width: 150px;
     justify-content: center;
     align-items: center;
+    margin-right: 70px;
 }
 
 .container .header ul section label {
@@ -49,31 +51,31 @@ body{
     color: white;
     height: 100%;
     align-items: center;
-    font-size: 50px; 
+    font-size: 50px;
 }
 
-.container .header ul section #foto{
+.container .header ul section #foto {
     display: flex;
     height: 105px;
     margin-top: 10px;
 }
 
-.container .header ul section #foto:hover{
+.container .header ul section #foto:hover {
     height: 110px;
     transition: .5s;
 }
 
-.container .header ul section #foto2{
+.container .header ul section #foto2 {
     display: flex;
     height: 60px
 }
 
-.container .header ul section #foto2:hover{
+.container .header ul section #foto2:hover {
     height: 68px;
     transition: .7s;
 }
 
-.container .box{
+.container .box {
     display: flex;
     background-color: rgb(28, 28, 28);
     width: 100%;
@@ -82,17 +84,21 @@ body{
     align-items: center;
 }
 
-.container .box .imagem{
+.container .box .imagem {
     display: flex;
+    position: static;
     width: 80%;
     height: 85%;
     background-image: url(Referencias/Quiz2.jpg);
     background-size: cover;
     justify-content: end;
     align-items: end;
+    opacity: 1;
+    filter: blur(0px);
+    z-index: 0;
 }
 
-.container .box .imagem button{
+.container .box .imagem button {
     display: flex;
     width: 150px;
     height: 60px;
@@ -107,7 +113,94 @@ body{
     border-radius: 3px;
 }
 
-.container .box .imagem button:hover{
+.container .box .imagem button:hover {
+    background-color: black;
+    border-color: white;
+    transition: .4s;
+}
+
+.first {
+    width: 100%;
+    height: 102vh;
+    background-color: rgb(50, 50, 50);
+}
+
+.first .second {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-image: url(Referencias/back_ideas/Quiz.jpg);
+    background-size: cover;
+    opacity: .5;
+    filter: blur(10px);
+    justify-content: center;
+    align-items: center;
+}
+
+.mid {
+    display: flex;
+    width: 100%;
+    height: 0px;
+    justify-content: center;
+}
+
+.mid .question {
+    display: flex;
+    width: 1000px;
+    height: 500px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    opacity: .85;
+    position: relative;
+    bottom: 620px;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+    backdrop-filter: blur(5px);
+}
+
+.mid .question h1 {
+    display: flex;
+    width: 100%;
+    height: 80px;
+    align-items: end;
+    justify-content: center;
+}
+
+.mid .question h3 {
+    display: flex;
+    width: 80%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.mid .question ul {
+    display: flex;
+    width: 60%;
+    height: fit-content;
+    justify-content: space-between;
+}
+
+.mid .question ul button {
+    display: flex;
+    width: 150px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 10px;
+    right: 20px;
+    background-color: rgb(68, 68, 68);
+    color: white;
+    border: 3px solid rgb(68, 68, 68);
+    border-radius: 3px;
+}
+
+.mid .question ul button:hover {
     background-color: black;
     border-color: white;
     transition: .4s;
