--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -416,7 +416,8 @@ html{
     flex-direction: column;
     justify-content: space-around;
     z-index: 2;
-    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-size: 17px;
 }
 
 .movies .box img#robs{
@@ -598,5 +599,36 @@ html{
     to {
         opacity: 0;
     }
+}
+
+.space {
+    display: flex;
+    width: 100%;
+    height: 60vh;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-bottom: 3px solid white;
+    border-top: 3px solid white;
+}
+
+.space .text {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: fit-content;
+    font-family: 'Brygada 1918', serif;
+}
+
+.space .status {
+    display: flex;
+    width: 60%;
+    height: 60%;
+    background-color: rgb(68, 68, 68);
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
 }
 
