--- a/site/public/css/joguinho.css
+++ b/site/public/css/joguinho.css
@@ -47,7 +47,10 @@ body {
 .container .header ul section label {
     display: flex;
     text-decoration: none;
-    font-family: 'Brygada 1918', serif;
+    /* font-family: 'Brygada 1918', serif; */
+    font-family: 'DM Sans';
+    font-weight: bolder;
+    font-style: italic;
     color: white;
     height: 100%;
     align-items: center;
@@ -138,6 +141,7 @@ body {
     display: flex;
     width: 100%;
     justify-content: center;
+    margin-top: 10px;
 }
 
 .content .line h1 {
@@ -154,4 +158,18 @@ body {
     border: 3px solid white;
     border-bottom: 0px;
     border-radius: 10px;
+    justify-content: center;
+}
+
+.content .rank .boxMensagem {
+    display: flex;
+    width: 80%;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.content .rank .boxMensagem .mensagem {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
 }
